feat: test feature

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     </div>
   </div>
 
+
  <div id="header">
+  <button class="close-window">закрыть</button>
   <div id="header-content">
     <div class="logo">
       <div><img src="images/1_face_cleaning.svg" alt="onefacecleaning"></div>
